Revise Chapters 3 and 4 (patricia.tex and modeling.tex).

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -16,6 +16,7 @@
 \documentclass[]{thesis}
 %\usepackage[page,toc,titletoc,title]{appendix}
 \usepackage[page,toc,titletoc,title]{appendix}
+\usepackage{array, booktabs, makecell}
 %%%%%%%%
 \include{user_commands}
 
@@ -37,7 +38,6 @@
 \include{modeling}
 \include{hs3}
 \include{conclusion}
-\include{conclusions}
 \end{doublespace}
 \begin{appendices}
 %\appendix
