Revise Chapter 5 (hs3.tex)

--- a/hs3.tex
+++ b/hs3.tex
@@ -15,7 +15,7 @@
 The preceding two chapters documented the static stability evolution within extraordinarily intense TCs from both an observational and numerical modeling perspective.
 The question remains, however, whether these results can be generalized to a large number of TCs at a range of intensities.
 This chapter first documents the presence of large horizontal gradients of static stability observed within category-one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}).
-Then the static stability structure of a large number of TCs is analyzed using the same rawinsonde dataset as that employed by \cite{DuranMolinari2016}.
+Then the static stability structure of a large number of TCs is analyzed using the same rawinsonde dataset as that employed in Chapter 2.
 
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
@@ -30,11 +30,11 @@ This strength will be leveraged to analyze the tropopause-layer static stability
 Although HS3 deployed 965 dropsondes within 1000 km of TCs over three years, providing unprecedented dropsonde coverage in TCs, these dropsondes sampled only seven different storms.
 Thus, although numerous observations are available, these observations may not be representative of TCs in general.
 To get a more general sense of the tropopause-layer structure of TCs, the large rawinsonde dataset of \cite{DuranMolinari2016} will be employed.
-This dataset includes 11735 rawinsondes that were launched within 1000 km of TCs between the years 1998-2011\footnote{Note that fewer rawinsondes were included in the \cite{DuranMolinari2016} study because the Richardson number, which was the focus of that paper, requires both winds and thermodynamic observations. Many soundings were excluded from that analysis due to missing wind observations in the upper troposphere.}.
+This dataset includes 11735 rawinsondes that were launched within 1000 km of TCs between the years 1998--2011\footnote{Note that fewer rawinsondes were included in the \cite{DuranMolinari2016} study because the Richardson number, which was the focus of that paper, requires both winds and thermodynamic observations. Many soundings were excluded from that analysis due to missing wind observations in the upper troposphere.}.
 After imposing a requirement that the cold-point tropopause be located at or above 14 km, 9318 soundings remained within 1000 km of TCs.
 These rawinsondes were deployed from stations across the eastern and central United States, as well as Belize, Grand Cayman, Puerto Rico, and Barbados (Fig. \ref{fig:maps}a).
 They observed 164 different Atlantic-basin TCs at a wide range of intensities within the western Atlantic Ocean, Caribbean Sea, and the Gulf of Mexico (Fig. \ref{fig:maps}b).
-Since most of the observations were collected in the mainland United States, the northwest quadrant of TCs was better-observed than other quadrants (Fig. \ref{fig:scatterplot}), particularly in hurricanes.
+Since most of the observations were collected over the mainland United States, the northwest quadrant of TCs was better-observed than other quadrants (Fig. \ref{fig:scatterplot}), particularly in hurricanes.
 All quadrants, however, contained observations at a wide range of radii for all storm categories, which facilitates the construction of composite averages.
 
 %---------------------------------------------------------------------------------------%
@@ -57,14 +57,14 @@ These soundings indicate that strong horizontal gradients of temperature and sta
 
 Cross sections of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) constructed using two sets of dropsondes are shown in Fig. \ref{fig:nadine-n2}.
 The first set consisted of dropsondes (Fig. \ref{fig:nadine-n2}a) that were deployed primarily within and near Nadine's cirrus canopy.
-The other set of dropsondes was released outside of Nadine's cirrus canopy, upshear of the center of circulation\footnote{According to the Statistical Hurricane Intensity Prediction Scheme (SHIPS; \citeauthor{DeMariaetal2005} \citeyear{DeMariaetal2005}) developmental database, the area-averaged, vortex-removed 850-200-mb wind shear at 00 UTC 15 September was 23 kt from the southwest.}.
+The other set of dropsondes was released outside of Nadine's cirrus canopy, upshear of the center of circulation\footnote{According to the Statistical Hurricane Intensity Prediction Scheme (SHIPS; \citeauthor{DeMariaetal2005} \citeyear{DeMariaetal2005}) developmental database, the area-averaged, vortex-removed 850--200-mb wind shear at 00 UTC 15 September was 23 kt from the southwest.}.
 The cross-sections are constructed along the flight track, with each of the dropsonde deployment locations marked by bold black digits on the satellite images and along the horizontal axes of the cross sections.
 
-The dropsondes deployed within Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}a,b) detected two distinct static stability maxima in the 12-17-km layer.
+The dropsondes deployed within Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}a,b) detected two distinct static stability maxima in the 12--17-km layer.
 One maximum was associated with a rapid increase in $N^2$ above the cold-point tropopause, which was located near the 16-km level.
 This stability maximum is quite similar to that observed outside of the eye in Hurricane Patricia \citep{DuranMolinari2018} and is consistent with the tropopause inversion layer noted by \cite{Wirth2003}.
 The second existed within the 13.5--15-km layer, where a horizontally-extended region of enhanced static stability was present everywhere within Nadine's cirrus canopy.
-Within this lower stable layer, $N^2$ was largest in the two soundings that were deployed at locations where the infrared brightness temperature was colder than -55\textdegree{}C (dropsondes number 4 and 7).
+Within this lower stable layer, $N^2$ was largest in the two soundings that were deployed at locations where the infrared brightness temperature was colder than -55\textdegree{}C (dropsondes 4 and 7).
 The static stability also maximized at a slightly higher altitude in these two soundings (14.4 and 14.5 km) than in the other soundings, which showed an $N^2$ maximum closer to 14 km.
 
 The dropsondes deployed outside of Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}c,d) observed a considerably different upper-level static stability structure.
