FINAL REVISIONmake dissertation make dissertation

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,14 +12,14 @@
 \section{Summary}
 %---------------------------------------------------------------------------------------%
 
-A large rawinsonde dataset collected during the 1998-2011 Atlantic hurricane seasons provided new insight into the tropopause-layer turbulence structure of TCs.
+A large rawinsonde dataset collected during the 1998--2011 Atlantic hurricane seasons provided new insight into the tropopause-layer turbulence structure of TCs.
 In addition, two new dropsonde datasets collected during HS3 and TCI provided observations of the TC tropopause layer with unprecedented spatiotemporal resolution.
 These observations both confirm the results of many previous observational studies and provide analyses of the static stability structure of TCs with unprecedented resolution.
 Finally, idealized simulations were able to reproduce the observed structure and evolution of turbulence and static stability in the tropopause layer.
 These simulations provided further insight into the physical mechanisms responsible for the observed variability.
 
 \subsection{Upper-tropospheric turbulence}
-A large rawinsonde dataset collected during the 1998-2011 Atlantic hurricane seasons provided new insight into the tropopause-layer turbulence structure of TCs.
+A large rawinsonde dataset collected during the 1998--2011 Atlantic hurricane seasons provided new insight into the tropopause-layer turbulence structure of TCs.
 In particular, environments conducive to turbulence are most common close to the storm center, but can be found all the way out at least the 1000-km radius.
 Near the storm center, the 13--14-km layer is most conducive to turbulence, but at outer radii, the most favorable region for turbulence lies near 12 km.
 
@@ -64,7 +64,7 @@ There also existed a distinct static stability maximum below the tropopause with
 It is hypothesized that vertical gradients of radiative heating, vertical gradients of turbulence, and differential advection all could contribute to the formation of this secondary stable layer.
 
 A subjective analysis of all dropsondes released within 500 km of TCs during HS3 suggested that multiple stable layers were most common within regions of cold cirrus clouds.
-Likewise, the tropopause was more "sharp" (i.e. the vertical temperature gradient changed more rapidly with height) within regions of cold cirrus.
+Likewise, the tropopause was more "sharp" (i.e., the vertical temperature gradient changed more rapidly with height) within regions of cold cirrus.
 These results were generalized using the large rawinsonde dataset of \cite{DuranMolinari2016}.
 These observations show that the tropopause is colder and sharper in regions of cold cirrus clouds, and the inversion layer at and just above the tropopause is stronger.
 In addition, the lower stratosphere is consistently about 3\textdegree{}C colder within regions of cold cirrus than in cloud-free or warmer-cloud regions.
@@ -82,18 +82,18 @@ The relative locations of these stable layers and cloud layers, however, remains
 The Cloud Physics Lidar (CPL) dataset from HS3 provides a unique opportunity to examine the relationship between stability maxima and the presence of cloud layers.
 The CPL provides observations of cloud and aerosol optical depth, along with particle characteristics, at 200-m horizontal and 30-m vertical resolution \citep{CPL}.
 This allows for the unambiguous detection of cloud layers --- even subvisible cirrus clouds that are not well-observed by satellite imagers \citep{Braunetal2016}, but can exert a strong influence on radiative heating tendencies \citep{Durranetal2009}.
-Since CPL flew aboard the same aircraft from which the HS3 dropsondes were deployed on 14-15 September 2012, it is possible to compare directly the temperature profiles observed by the dropsondes to the cloud optical depth profiles observed by CPL in Hurricane Nadine (2012).
+Since CPL flew aboard the same aircraft from which the HS3 dropsondes were deployed on 14--15 September 2012, it is possible to compare directly the temperature profiles observed by the dropsondes to the cloud optical depth profiles observed by CPL in Hurricane Nadine (2012).
 If stable layers tend to occur near vertical gradients of optical depth, a relationship can be established definitively between the presence of cirrus clouds and stability maxima.
-However, even if such a relationship is established, it is impossible to know whether the cloud layer is present because the stable layer is present, or whether the stable layer is created by the radiative tendencies associated with the cloud.
+Even if such a relationship is established, however, it is impossible to know whether the cloud layer is present because the stable layer is present, or whether the stable layer is created by the radiative tendencies associated with the cloud.
 Idealized experiments such as those described by \cite{Durranetal2009} and \cite{Dinhetal2010} could provide some insight into how the relationship between cloud layers and the vertical temperature profile evolves.
 
 \subsection{Tropopause-layer static stability and the TC diurnal cycle}
 
-The existence of a diurnal cycle of TC convection has been well established in recent literature (e.g. \citeauthor{Kossin2002} \citeyear{Kossin2002}; \citeauthor{Dunionetal2014} \citeyear{Dunionetal2014}; \citeauthor{BowmanFowler2015} \citeyear{BowmanFowler2015}).
+The existence of a diurnal cycle of TC convection has been well established in recent literature (e.g., \citeauthor{Kossin2002} \citeyear{Kossin2002}; \citeauthor{Dunionetal2014} \citeyear{Dunionetal2014}; \citeauthor{BowmanFowler2015} \citeyear{BowmanFowler2015}).
 Since this cycle exhibits a convective maximum overnight and in the early morning, and a convective minimum in the afternoon, radiative heating tendencies are a natural suspect in its evolution.
 The idealized simulations of \cite{NavarroHakim2016} implicate periodic oscillations in upper-level radiative heating in the evolution of the TC diurnal cycle.
 Their results exhibit characteristics of an inertia--gravity wave response with an outward-propagating horizontal phase speed of 9.8 m s\textsuperscript{-1}, which is consistent with the outward motion of the diurnal pulse observed by \cite{Dunionetal2014}. If the diurnal pulse is, indeed, an outward-propagating inertia--gravity wave, the upper-tropospheric static stability profile could have implications for the characteristics of its propagation.
-Analysis of high-density dropsonde observations collected through on ongoing diurnal pulse could provide great insight into whether upper-tropospheric static stability might modify its propagation characteristics.
+Analysis of high-density dropsonde observations collected through an ongoing diurnal pulse could provide great insight into whether upper-tropospheric static stability might modify its propagation characteristics.
 
 \subsection{Three-dimensional modeling of the TC outflow layer}
 Convection and turbulence are fundamentally three-dimensional processes that are not fully captured in the axisymmetric simulations used herein.
